--- a/BlazorApp1/Components/Layout/NavMenu.razor
+++ b/BlazorApp1/Components/Layout/NavMenu.razor
@@ -25,6 +25,17 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="libros">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Libros
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="usuarios">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Usuarios
+            </NavLink>
+        </div>
     </nav>
 </div>
-
